# ParallelProgrammingC

./: .gitignore  CMakeLists.txt  bash.exe.stackdump
lab_1/: Makefile  moj_program  moj_program.c
lab_10/zad_1/: petle.c
lab_10/zad_2/: mat_vec.c  openmp_mat_vec.c
lab_11/zad_2/: asda.c  search_max_openmp.c  search_max_openmp.h  test_search_max_openmp.c
lab_11/zad_3/: calka.c
lab_12/zad_1/: MPI_simple.c  Makefile
lab_12/zad_2/: MPI_simple.c
lab_12/zad_3/: MPI_simple.c
lab_13/zad_1/: heat.c
lab_13/zad_2/: Makefile  pi.c  pi.exe.stackdump
lab_2/: Makefile  clone  clone.c  fork  fork.c  program  program.c
lab_3/zad_1/: Makefile  pthreads_detach_kill  pthreads_detach_kill.c  zad1.txt
lab_3/zad_2/: Makefile  pthreads_self  pthreads_self.c  zad2.txt
lab_3/zad_3/: Makefile  pthreads_struct  pthreads_struct.c  zad3.txt
lab_4/zad_1/: pub_sym_1.c
lab_4/zad_2/: pub_sym_2.c
lab_5/zad_1/: pthreads_suma  pthreads_suma.c
lab_5/zad_2/: pthreads_suma  pthreads_suma.c
lab_7/zad_1/: kolejka.c  kolejka.h  prod_cons.c
lab_7/zad_2/: czyt_pis.c  czytelnia.c  czytelnia.h
lab_7/zad_3/: czyt_pis.c  czytelnia.c  czytelnia.h
lab_9/zad_1/: openmp_watki_zmienne.c
lab_9/zad_2/: openmp_petle.c
pomiar_czasu/: pomiar_czasu.c
